# personal-vulkan-engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  config.cpp  config.h  main.cpp
conan_profiles/: debug_profile  release_profile
control/: app.cpp  app.h  logging.cpp  logging.h
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt
examples/example2/src/: main.cpp
include/: MyClass.ixx  app.h  commands.h  config.h  device.h  engine.h  frame.h  framebuffer.h  instance.h  logging.h  memory.h  mesh.h  pipeline.h  queue_families.h  render_structs.h  scene.h  shaders.h  swapchain.h  sync.h  triangle_mesh.h
model/: scene.cpp  scene.h  vertex_menagerie.cpp  vertex_menagerie.h
models/: sphere.mtl
shaders/: compile.bat  fragment.spv  shader.frag  shader.vert  vertex.spv
src/: MyClass.cpp  app.cpp  engine.cpp  instance.cpp  main.cpp  scene.cpp  triangle_mesh.cpp
view/: engine.cpp  engine.h
view/vkImage/: image.cpp  image.h
view/vkInit/: commands.h  descriptors.cpp  descriptors.h  device.h  framebuffer.h  instance.h  pipeline.h  swapchain.h  sync.h
view/vkMesh/: mesh.h  obj_mesh.cpp  obj_mesh.h
view/vkUtil/: frame.cpp  frame.h  memory.cpp  memory.h  queue_families.h  render_structs.h  shaders.h  single_time_commands.cpp  single_time_commands.h
